Update Estudos de HEB I.tex

--- a/5º Período/História da Economia Brasileira I/Estudos de HEB I.tex
+++ b/5º Período/História da Economia Brasileira I/Estudos de HEB I.tex
@@ -155,6 +155,7 @@ O capítulo conclui que a regressão econômica e a expansão da economia de sub
 
 Furtado argumenta que o legado dessa fase histórica foi a criação de uma estrutura econômica que, ao invés de promover o desenvolvimento, reforçou as desigualdades e as disparidades regionais, perpetuando um ciclo de pobreza e subdesenvolvimento que seria difícil de romper nas décadas seguintes.
 
+\newpage
 \subsection{\textbf{O Desenvolvimento Econômico no Brasil Pré-1945 - Villela e Suzigan}}
 
 \subsubsection{\textbf{Capítulo 4: Regressão Econômica e Expansão da Área de Subsistência}}
@@ -171,6 +172,7 @@ Os autores argumentam que a regressão econômica do Brasil no século XVIII nã
 
 O capítulo conclui que a expansão da área de subsistência, longe de ser um sinal de desenvolvimento econômico, refletia uma adaptação ao colapso das atividades mineradoras, marcando um retrocesso significativo na estrutura econômica do Brasil. Essa fase histórica deixou um legado de desigualdade e subdesenvolvimento que moldou a trajetória econômica do país nas décadas seguintes. A falta de investimentos em setores produtivos diversificados e a concentração fundiária contribuíram para a criação de uma economia dependente, vulnerável às flutuações externas e incapaz de promover o desenvolvimento sustentável a longo prazo.
 
+\newpage
 \subsection{\textbf{Adeus, Senhor Portugal - Rafael Cariello e Thales Zamberlam Pereira}}
 
 \subsubsection{\textbf{Capítulo 1: A Crise Inaugural}}
@@ -190,6 +192,42 @@ Os autores destacam que, além da crise econômica, as ideias iluministas e libe
 O capítulo conclui que a crise fiscal não apenas precipitou o fim do absolutismo em Portugal, mas também criou as condições para a independência do Brasil em 1822. A crise econômica desestabilizou o governo, gerou insatisfação generalizada e abriu espaço para a emergência de novas forças políticas. Essas forças, impulsionadas tanto por motivações econômicas quanto por ideais iluministas, foram essenciais para a consolidação de um novo arranjo político que culminaria na separação entre Brasil e Portugal e na formação de uma nova ordem constitucional.
 
 Em síntese, o capítulo 1 de *Adeus, Senhor Portugal* oferece uma análise rica e detalhada das interconexões entre crise fiscal, mudança política e o papel das ideias iluministas no processo que levou à independência do Brasil. A abordagem dos autores revela como fatores econômicos, sociais e intelectuais se entrelaçaram para moldar um dos períodos mais críticos da história brasileira.
+
+\newpage
+\subsection{\textbf{Chapter 9 - Economic Consequences of Brazilian Independece (HOW LATIN AMERICA FELL BEHIND )}}
+
+O capítulo 9 do livro \textit{How Latin America Fell Behind}, escrito por Stephen Haber e Herbert S. Klein, aborda as implicações econômicas da independência do Brasil, questionando a narrativa tradicional de que essa independência resultou em uma maior dependência econômica em relação à Grã-Bretanha e consequente atraso econômico.
+
+\subsubsection*{Contextualização Histórica}
+Os autores iniciam o capítulo contextualizando o processo de independência do Brasil, destacando que, ao contrário de outras nações latino-americanas, o Brasil não passou por uma guerra devastadora, mas sim por um processo relativamente pacífico. A continuidade da mesma dinastia real, a dos Bragança, no poder após a independência, ofereceu uma base de estabilidade política incomum para a época.
+
+\subsubsection*{1. Dependência Econômica Aumentada Após a Independência}
+A visão predominante na historiografia sugere que a independência do Brasil intensificou sua dependência econômica em relação à Grã-Bretanha. A economia brasileira, ainda fortemente agrária, teria ficado à mercê do poderio industrial britânico, com o país se tornando um mercado cativo para as manufaturas britânicas enquanto permanecia um exportador de produtos primários.
+
+\paragraph*{Análise Crítica}
+Haber e Klein desafiam essa visão, argumentando que a relação comercial entre Brasil e Grã-Bretanha já era significativa antes da independência. O capítulo ressalta que o Brasil já estava integrado ao sistema econômico britânico no século XVIII, com o comércio de ouro, diamantes e algodão, em grande parte, dominado pelos britânicos. Assim, a independência política não representou uma mudança drástica na dependência econômica existente.
+
+\subsubsection*{2. Mudanças na Direção e Quantidade do Comércio}
+Apesar da independência não ter causado uma alteração imediata na direção do comércio exterior do Brasil, o capítulo observa que, a partir da década de 1830, o comércio exterior começou a se expandir gradualmente. As exportações brasileiras se diversificaram, especialmente com o crescimento do comércio de café para os Estados Unidos, que emergiu como um importante parceiro comercial, ao lado de países como Alemanha, França e Portugal.
+
+\paragraph*{Impactos Econômicos}
+Os autores destacam que, embora a Grã-Bretanha mantivesse uma posição privilegiada no comércio com o Brasil, o aumento do comércio exterior não necessariamente aumentou a dependência do Brasil em relação à Grã-Bretanha. Na verdade, o comércio brasileiro tornou-se mais diversificado ao longo do século XIX, o que desafiou a ideia de uma crescente dependência econômica.
+
+\subsubsection*{3. Industrialização Atrasada}
+Um dos pontos centrais do capítulo é a discussão sobre a industrialização brasileira. A tese dos teóricos da dependência sugere que a entrada massiva de produtos britânicos no mercado brasileiro impediu o desenvolvimento de uma indústria nacional. No entanto, os autores argumentam que o atraso na industrialização brasileira foi resultado de uma combinação de fatores internos, incluindo:
+
+\begin{itemize}
+    \item \textbf{Altos custos de transporte:} A ausência de infraestrutura de transporte, como ferrovias, até as últimas décadas do século XIX, limitou a integração dos mercados internos e elevou os custos de produção.
+    \item \textbf{Baixa produtividade agrícola:} A estrutura agrária do Brasil, marcada pela escravidão e baixa produtividade, restringiu a acumulação de capital e a demanda interna por produtos manufaturados.
+    \item \textbf{Sistema financeiro subdesenvolvido:} A falta de instituições financeiras robustas dificultou o financiamento de atividades industriais. As indústrias brasileiras enfrentavam altos custos iniciais, com pouca capacidade de mobilização de capital, o que restringiu o crescimento industrial.
+\end{itemize}
+
+\paragraph*{Conclusão dos Autores}
+Haber e Klein concluem que a falta de industrialização rápida no Brasil não pode ser atribuída unicamente à influência britânica ou às condições impostas pela independência. Ao contrário, fatores estruturais internos desempenharam um papel muito mais significativo. Eles argumentam que a independência teve pouco impacto nas características econômicas do Brasil no século XIX, e que o subdesenvolvimento econômico do país foi mais uma consequência de seus próprios problemas internos do que de sua relação com a Grã-Bretanha.
+
+\subsubsection*{Reflexões Finais}
+O capítulo oferece uma nova perspectiva sobre as consequências da independência do Brasil, sugerindo que a narrativa da dependência econômica pode ser simplista e que a verdadeira causa do atraso econômico brasileiro reside em fatores internos que limitaram a capacidade do país de se industrializar e modernizar sua economia no século XIX.
+
 
 \subsection{\textbf{Referêcncias Bibliográficas}}
 \begin{thebibliography}{99}
@@ -221,6 +259,10 @@ VILLELA, André A.; SUZIGAN, Wilson. \textbf{O Desenvolvimento Econômico no Bra
 \bibitem{Cariello2020}
 CARIELLO, Rafael; PEREIRA, Thales Zamberlam. \textbf{Adeus, Senhor Portugal: Crise do Absolutismo e a Independência do Brasil}. 1ª ed. São Paulo: Companhia das Letras, 2020.
 \textbf{Capítulo 1: A Crise Inaugural}.
+
+\bibitem{HaberKlein1996}
+HABER, Stephen; KLEIN, Herbert S. \textbf{The Economic Consequences of Brazilian Independence}. In: HABER, Stephen (Ed.). \textbf{How Latin America Fell Behind: Essays on the Economic Histories of Brazil and Mexico, 1800-1914}. 1ª ed. Stanford, CA: Stanford University Press, 1996. \textbf{Capítulo 9}.
+
 
 \end{thebibliography}
 
